Asignando empleados a proyectos, Reporte de asignaciones

--- a/FrontPrys/FrontProyectos/src/app/menu/menu.component.html
+++ b/FrontPrys/FrontProyectos/src/app/menu/menu.component.html
@@ -24,13 +24,15 @@
               >Empelados</a
             >
             <a routerLink="/proyectos" class="nav-item nav-link">Proyectos</a>
+            <a [routerLink]="['/asignacion']" class="nav-item nav-link">Asignar Empleados a Proyecto</a>
+            <a [routerLink]="['/reporte_asignaciones']" class="nav-item nav-link">Ver Asignaciones</a>
             <div class="nav-item dropdown">
               <a
                 href="#!"
                 class="nav-link dropdown-toggle"
                 data-bs-toggle="dropdown"
                 >Pages</a>
-            </div>
+            </div>            
             <a href="contact.html" class="nav-item nav-link">Contact</a>
           </div>
         </div>
