--- a/FrontPrys/FrontProyectos/src/app/proyecto/nuevo-proyecto/nuevo-proyecto.component.html
+++ b/FrontPrys/FrontProyectos/src/app/proyecto/nuevo-proyecto/nuevo-proyecto.component.html
@@ -42,7 +42,7 @@
       <label for="fechainicio">Fecha Inicio</label>
       <input
         formControlName="fechainicio"
-        type="text"
+        type="date"
         class="form-control"
         id="fechainicio"
         placeholder="Fecha Inicio"
@@ -53,7 +53,7 @@
       <label for="fechafin">Fecha Final</label>
       <input
         formControlName="fechafin"
-        type="text"
+        type="date"
         class="form-control"
         id="fechafin"
         placeholder="Fecha Final"
