--- a/FrontPrys/FrontProyectos/src/app/proyecto/proyecto.component.html
+++ b/FrontPrys/FrontProyectos/src/app/proyecto/proyecto.component.html
@@ -19,10 +19,10 @@
       <thead class="table-dark">
         <tr>
           <th>#</th>
-          <th>Nombres</th>
-          <th>Apellidos</th>
-          <th>Direccion</th>
-          <th>Telefono</th>
+          <th>Nombre</th>
+          <th>Descripcion</th>
+          <th>Fecha Inicio</th>
+          <th>Fecha Fin</th>
           <th>Opciones</th>
         </tr>
       </thead>
